feat(care): Erholungsvorschlag bei Überlast im Fürsorge-Hinweis (#1795)
